--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://schadokar.github.io/go-to-do-app",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,8 @@
     "semantic-ui-react": "^0.87.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
