--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-REACT_APP_API_ENDPOINT=http://localhost:8080
-DB_CONNECTION=mongodb://localhost:27017
+REACT_APP_API_ENDPOINT=http://backend:8080
+DB_HOST=db
 DB_NAME=test
+DB_USER=appuser
+DB_PASS=apppass
+DB_ROOT_USER=adminuser
+DB_ROOT_PASS=adminpass
