feat: dockerize SPA frontend + 12 factors
- consider immutable artifact : Env vars must be injected from outside even if its a static web-site
- Using sidecar container to convert env-vars to a served file by frontend web server (nginx)
- consider only build and release stages - dev stage with hot-reload not considered for the time being.
- Enable gzip compression for HTTP2 requests - Performance
- Migrate API base image to distroless for more security

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-REACT_APP_API_ENDPOINT=http://backend:8080
+COMPOSE_PROJECT_NAME=todo-app
+COMPOSE_FILE=docker-compose.api.yaml:docker-compose.frontend.yaml
+REACT_APP_API_ENDPOINT=http://localhost:8080
 DB_HOST=db
 DB_NAME=test
 DB_USER=appuser
