--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,12 +8,13 @@ RUN go mod download
 COPY . .
 # generate binary artifact
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /go/bin/todo
-RUN ls -lh /go/bin
 
 # stage - release
-# FROM gcr.io/distroless/base-debian10 as release
-FROM alpine:3.12 as release
+FROM gcr.io/distroless/base-debian10 as release
+# FROM alpine:3.12 as release
 COPY --from=build /go/bin/todo /bin/todo
-RUN ls -lh /bin/todo
 EXPOSE 8080
 ENTRYPOINT ["todo"]
+
+# stage - dev
+# TODO - hot-reload (go run main.go)
