feat: doc: helm chart - api + helm releases api+db
- .env is the single source of truth of both ways of delpoyment: either docker-compose or helmfile

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,7 @@ DB_HOST=db
 DB_NAME=test
 DB_USER=appuser
 DB_PASS=apppass
-DB_ROOT_USER=adminuser
 DB_ROOT_PASS=adminpass
+DB_IMAGE_TAG=4.4.1
+DB_STORAGE_SIZE=1Gi
+DB_REPLICA_COUNT=1
