--- a/.helm-charts/todo-api/templates/deployment.yaml
+++ b/.helm-charts/todo-api/templates/deployment.yaml
@@ -13,8 +13,9 @@ spec:
       {{- include "todo-api.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-    {{- with .Values.podAnnotations }}
       annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+    {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
     {{- end }}
       labels:
