feat: healthz probe with specific route

--- a/.helm-charts/todo-api/templates/deployment.yaml
+++ b/.helm-charts/todo-api/templates/deployment.yaml
@@ -43,7 +43,7 @@ spec:
                 name: {{ include "todo-api.fullname" . }}
           livenessProbe:
             httpGet:
-              path: /api/task
+              path: /healthz
               port: http
           readinessProbe:
             httpGet:
