--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 COMPOSE_PROJECT_NAME=todo-app
-COMPOSE_FILE=docker-compose.backend.yaml:docker-compose.frontend.yaml
+COMPOSE_FILE=docker-compose.yaml
 REACT_APP_API_ENDPOINT=http://localhost:8080
 DB_HOST=db
 DB_NAME=test
