--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,28 @@ services:
       --env-vars-filter=REACT_APP_
       --run-as=daemon
       --refresh-period=50
+  api:
+    build:
+      context: server/
+      target: release
+    depends_on:
+      - db
+    ports:
+      - 8080:8080
+    environment:
+      DB_CONNECTION: mongodb://${DB_USER}:${DB_PASS}@${DB_HOST}:27017/${DB_NAME}
+      DB_NAME: ${DB_NAME}
+    image: abdennour/go-to-do-api:rc
+  db:
+    image: bitnami/mongodb:${DB_IMAGE_TAG}
+    volumes:
+      - db-data:/bitnami/mongodb
+    environment:
+      MONGODB_ROOT_PASSWORD: ${DB_ROOT_PASS}
+      MONGODB_DATABASE: ${DB_NAME}
+      MONGODB_USERNAME: ${DB_USER}
+      MONGODB_PASSWORD: ${DB_PASS}
 
 volumes:
+  db-data:
   env-js:
