feat: ability to set ingress host from .env

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,6 @@ DB_IMAGE_TAG=4.4.1
 DB_STORAGE_SIZE=1Gi
 DB_REPLICA_COUNT=1
 FRONTEND_REPLICA_COUNT=2
+FRONTEND_INGRESS_HOST=todo.docker.internal
 API_REPLICA_COUNT=2
+API_INGRESS_HOST=todo-api.docker.internal
