env added and readme updated

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 node_modules
 /.pnp
 .pnp.js
+package-lock.json
+
+# build
+*.exe
 
 # testing
 /coverage
@@ -13,6 +17,7 @@ node_modules
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
