--- a/go-server/.env.example
+++ b/go-server/.env.example
@@ -1,4 +1,4 @@
 # MONGODB URI
-DB_URI="MONGO DB Connection string"
-DB_NAME="test"
-DB_COLLECTION_NAME="todolist"
+DB_URI="mongodb+srv://Benjamin:test@cluster0.n2p6k.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+DB_NAME="Todolist"
+DB_COLLECTION_NAME="ToDoList"
