--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.3",
     "react": "^16.14.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^16.14.0",
     "react-scripts": "3.3.0",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "typeface-montserrat": "^1.1.13"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "startclient": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
