--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-github: #[schadokar]
+github: schadokar
 patreon: schadokar
 open_collective: # Replace with a single Open Collective username
 ko_fi: schadokar
